--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>my home page </title>
 </head>
 <body>
+        <h1>Homework3</h1>
+        <h3>The outputis Below</h3>
+        <hr>
+        <p id="demo"></p>
+        <p id="sumdata"></p>
+        <p id="binarydata"></p>
+        <script src="javapage.js"></script>
     
 </body>
 </html>
