adding more coding

--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>my home page </title>
-</head>
+<html>
+    <head>
+    <title>Assigment 3</title>
+    <script src="app.js"></script>
+    </head> 
 <body>
-        <h1>Homework3</h1>
-        <h3>The outputis Below</h3>
-        <hr>
-        <p id="demo"></p>
-        <p id="sumdata"></p>
-        <p id="binarydata"></p>
-        <script src="javapage.js"></script>
+    <h1>Javascript Homework</h1>
+    <h3>The output below </h3>
+    <hr>
+    <p id="demo"></p>
+    <p id="sumdata"></p>
+    <p id="binarydata"></p>
+
+    <hr>
     
 </body>
 </html>
