changing  inthe web page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <script src="app.js"></script>
     </head> 
 <body>
-    <h1>Javascript Homework</h1>
-    <h3>The output below </h3>
+    <h1>JavaScript Homework</h1>
+    <h3>The program below </h3>
     <hr>
     <p id="demo"></p>
     <p id="sumdata"></p>
